--- a/wasm/src/org.graalvm.wasm/src/META-INF/native-image/org.graalvm.wasm/wasm-language/native-image.properties
+++ b/wasm/src/org.graalvm.wasm/src/META-INF/native-image/org.graalvm.wasm/wasm-language/native-image.properties
@@ -1,4 +1,7 @@
 # This file contains native-image arguments needed to build graal-wasm
 
 Args = --initialize-at-build-time=org.graalvm.wasm \
-       -H:MaxRuntimeCompileMethods=2000
+       -H:MaxRuntimeCompileMethods=2700 \
+       -H:+UnlockExperimentalVMOptions \
+       -H:+VectorAPISupport \
+       --add-modules=jdk.incubator.vector
