Added common Truffle version support.

--- a/truffle/src/com.oracle.truffle.runtime/src/META-INF/native-image/org.graalvm.truffle/truffle-runtime/native-image.properties
+++ b/truffle/src/com.oracle.truffle.runtime/src/META-INF/native-image/org.graalvm.truffle/truffle-runtime/native-image.properties
@@ -2,6 +2,7 @@ ForceOnModulePath = org.graalvm.truffle.runtime
 Args = --macro:truffle-svm \
        --features=com.oracle.svm.truffle.TruffleFeature \
        --features=com.oracle.svm.truffle.TruffleJFRFeature \
+       --features=com.oracle.truffle.runtime.VersionCheckFeature \
        -H:MaxRuntimeCompileMethods=2500
 
 JavaArgs = -Dtruffle.TruffleRuntime=com.oracle.svm.truffle.api.SubstrateTruffleRuntime \
