Change language permission feature to print only a single violation per prevailed method.

--- a/substratevm/src/com.oracle.svm.truffle.tck/src/META-INF/native-image/native-image.properties
+++ b/substratevm/src/com.oracle.svm.truffle.tck/src/META-INF/native-image/native-image.properties
@@ -21,6 +21,7 @@ JavaArgs = --add-exports org.graalvm.nativeimage.base/com.oracle.svm.util=ALL-UN
            --add-exports jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED
 
 ProvidedHostedOptions = \
+  TruffleTCKCollectMode= \
   TruffleTCKPermissionsReportFile= \
   TruffleTCKPermissionsExcludeFiles= \
   TruffleTCKPermissionsMaxStackTraceDepth= \
