Add owners file for resources

--- a/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/OWNERS.toml
+++ b/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/OWNERS.toml
@@ -6,3 +6,12 @@ all = [
 ]
 any = [
 ]
+[[rule]]
+files = "ClassLoaderSupport.java"
+all = [
+    "david.nestorovic@oracle.com",
+    "ivan.ristovic@oracle.com",
+    "paul.woegerer@oracle.com"
+]
+any = [
+]
