--- a/truffle/src/com.oracle.truffle.api/src/META-INF/native-image/org.graalvm.truffle/truffle-api/native-image.properties
+++ b/truffle/src/com.oracle.truffle.api/src/META-INF/native-image/org.graalvm.truffle/truffle-api/native-image.properties
@@ -3,6 +3,7 @@ ForceOnModulePath = org.graalvm.truffle
 Args = --macro:truffle-svm \
        --features=com.oracle.svm.truffle.TruffleBaseFeature \
        --features=com.oracle.truffle.api.object.DynamicObjectFeature \
+       --features=com.oracle.truffle.api.impl.TruffleAPIFeature \
        --initialize-at-build-time=com.oracle.truffle \
        --initialize-at-build-time=org.graalvm.jniutils \
        --initialize-at-build-time=org.graalvm.nativebridge \
