--- a/visualizer/IdealGraphVisualizer/branding/pom.xml
+++ b/visualizer/IdealGraphVisualizer/branding/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>IdealGraphVisualizer-branding</name>
     <parent>
         <groupId>org.graalvm.visualizer</groupId>
         <artifactId>IdealGraphVisualizer-parent</artifactId>
@@ -8,16 +7,27 @@
     </parent>
     <artifactId>IdealGraphVisualizer-branding</artifactId>
     <packaging>nbm</packaging>
+    <name>IdealGraphVisualizer-branding</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-netbeans-api-annotations-common</artifactId>
+            <version>${netbeans.version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <resources>
             <resource>
-                <directory>${basedir}/src/main/nbm-branding</directory>
+                <directory>${project.basedir}/src/main/nbm-branding</directory>
                 <!-- f.e. allow replacing ${project.version} in all property files below src/main/nbm-branding -->
                 <includes>
                     <include>**/*</include>
                 </includes>
                 <filtering>true</filtering>
-                <targetPath>${basedir}/target/filtered-nbm-branding</targetPath>
+                <targetPath>${project.basedir}/target/filtered-nbm-branding</targetPath>
             </resource>
         </resources>
         <plugins>
@@ -38,7 +48,7 @@
                 <artifactId>nbm-maven-plugin</artifactId>
                 <configuration>
                     <!-- use previously filtered branding sources -->
-                    <brandingSources>${basedir}/target/filtered-nbm-branding</brandingSources>
+                    <brandingSources>${project.basedir}/target/filtered-nbm-branding</brandingSources>
                 </configuration>
             </plugin>
             <plugin>
@@ -53,14 +63,4 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.netbeans.api</groupId>
-            <artifactId>org-netbeans-api-annotations-common</artifactId>
-            <version>${netbeans.version}</version>
-        </dependency>
-    </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 </project>
