--- a/truffle/pyproject.toml
+++ b/truffle/pyproject.toml
@@ -5,3 +5,5 @@ line-length = 120
 # year), to ensure a consistent code-style, the version is fixed to a major
 # version.
 required-version = '23'
+exclude = 'mxbuild'
+include = 'mx\.truffle/mx_polybench/.*\.py$'
