Test micronaut with --future-defaults

--- a/.github/workflows/micronaut-future-defaults.yml
+++ b/.github/workflows/micronaut-future-defaults.yml
@@ -38,13 +38,13 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-name: Weekly Micronaut Tests
+name: Weekly Micronaut Tests (--future-defaults=all)
 
 on:
   pull_request:
     paths:
       - '.github/workflows/micronaut-template.yml'
-      - '.github/workflows/micronaut.yml'
+      - '.github/workflows/micronaut-future-defaults.yml'
   schedule:
   - cron: '0 2 * * 1'
   workflow_dispatch:
@@ -52,3 +52,5 @@ on:
 jobs:
   call-template:
     uses: './.github/workflows/micronaut-template.yml'
+    with:
+      NATIVE_IMAGE_OPTIONS: '--future-defaults=all'
