--- a/.github/workflows/micronaut-template.yml
+++ b/.github/workflows/micronaut-template.yml
@@ -41,14 +41,45 @@
 name: Weekly Micronaut Tests
 
 on:
-  pull_request:
-    paths:
-      - '.github/workflows/micronaut-template.yml'
-      - '.github/workflows/micronaut.yml'
-  schedule:
-  - cron: '0 2 * * 1'
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      NATIVE_IMAGE_OPTIONS:
+        required: false
+        type: string
+
+env:
+  MICRONAUT_CORE_PATH: ${{ github.workspace }}/micronaut-core
+  MICRONAUT_JAVA_VERSION: 21
+  # Enforce experimental option checking in CI (GR-47922)
+  NATIVE_IMAGE_EXPERIMENTAL_OPTIONS_ARE_FATAL: 'true'
+
+permissions:
+  contents: read # to fetch code (actions/checkout)
 
 jobs:
-  call-template:
-    uses: './.github/workflows/micronaut-template.yml'
+  build-graalvm-and-micronaut:
+    name: Native Tests
+    runs-on: ubuntu-22.04
+    if: (github.event_name == 'schedule' && github.repository == 'oracle/graal') || (github.event_name != 'schedule')
+    steps:
+    - name: Checkout oracle/graal
+      uses: actions/checkout@v4
+    - name: Build GraalVM JDK
+      uses: ./.github/actions/build-graalvm
+      with:
+        java-version: ${{ env.MICRONAUT_JAVA_VERSION }}
+    - name: Run nativeTest in Micronaut launch project
+      run: |
+        curl --fail --silent --location --retry 3 --max-time 10 --output demo.zip --request GET 'https://launch.micronaut.io/create/default/com.example.demo?lang=JAVA&build=GRADLE&test=JUNIT&javaVersion=JDK_${{ env.MICRONAUT_JAVA_VERSION }}'
+        unzip demo.zip
+        cd demo
+        ./gradlew nativeTest
+    - name: Checkout micronaut-projects/micronaut-core
+      uses: actions/checkout@v4
+      with:
+        repository: micronaut-projects/micronaut-core
+        path: ${{ env.MICRONAUT_CORE_PATH }}
+    - name: Run nativeTest in micronaut-core
+      run: |
+        cd ${{ env.MICRONAUT_CORE_PATH }}
+        ./gradlew nativeTest
