Enterprise polyglot uses polyglot isolate resource for wrong platform.

--- a/truffle/mx.truffle/polyglot_isolate_resource.template
+++ b/truffle/mx.truffle/polyglot_isolate_resource.template
@@ -42,6 +42,8 @@ package <package>;
 
 import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.InternalResource;
+import com.oracle.truffle.api.InternalResource.CPUArchitecture;
+import com.oracle.truffle.api.InternalResource.OS;
 
 import com.oracle.truffle.polyglot.enterprise.isolate.PolyglotIsolateLanguages;
 
@@ -49,7 +51,7 @@ import java.io.IOException;
 import java.nio.file.Path;
 
 @InternalResource.Id(value = PolyglotIsolateResource.ID, componentId = "engine", optional = true)
-@PolyglotIsolateLanguages({<languageIds>})
+@PolyglotIsolateLanguages(value={<languageIds>}, os=OS.<OS>, cpuArchitecture=CPUArchitecture.<CPUArchitecture>)
 public final class PolyglotIsolateResource implements InternalResource {
 
     static final String ID = "<resourceId>";
