Update owners files around crema

--- a/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/hub/OWNERS.toml
+++ b/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/hub/OWNERS.toml
@@ -6,3 +6,8 @@ all = [
 ]
 any = [
 ]
+[[rule]]
+files = "RuntimeClassLoading.java RuntimeDynamicHubMetadata.java RuntimeReflectionMetadata.java"
+all = [
+    "gilles.m.duboscq@oracle.com",
+]
