--- a/substratevm/src/com.oracle.svm.interpreter/OWNERS.toml
+++ b/substratevm/src/com.oracle.svm.interpreter/OWNERS.toml
@@ -1,12 +1,6 @@
 [[rule]]
 files = "*"
 all = [
-    "alfonso.peterssen@oracle.com",
     "bernhard.urban-forster@oracle.com",
-    "martin.entlicher@oracle.com",
-]
-any = [
-    "alfonso.peterssen@oracle.com",
-    "bernhard.urban-forster@oracle.com",
-    "martin.entlicher@oracle.com",
+    "gilles.m.duboscq@oracle.com",
 ]
