Support opening CFG files in existing instance

--- a/visualizer/C1Visualizer/CompilationView/pom.xml
+++ b/visualizer/C1Visualizer/CompilationView/pom.xml
@@ -30,6 +30,11 @@
             <version>${netbeans.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.netbeans.modules</groupId>
+            <artifactId>org-netbeans-modules-editor-mimelookup-impl</artifactId>
+            <version>${netbeans.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-modules-sendopts</artifactId>
             <version>${netbeans.version}</version>
