Allowing caching of filter creation and speed up colorize filter

--- a/visualizer/IdealGraphVisualizer/Filter/src/main/resources/org/graalvm/visualizer/filter/resources/defaultFilters.properties
+++ b/visualizer/IdealGraphVisualizer/Filter/src/main/resources/org/graalvm/visualizer/filter/resources/defaultFilters.properties
@@ -29,6 +29,7 @@ ColorRule=org.graalvm.visualizer.filter.ColorFilter$ColorRule
 CombineFilter=org.graalvm.visualizer.filter.CombineFilter
 ConnectionFilter=org.graalvm.visualizer.filter.ConnectionFilter
 CustomFilter=org.graalvm.visualizer.filter.CustomFilter
+CachedLanguageFilter=org.graalvm.visualizer.filter.CachedLanguageFilter
 EdgeColorIndexFilter=org.graalvm.visualizer.filter.EdgeColorIndexFilter
 GradientColorFilter=org.graalvm.visualizer.filter.GradientColorFilter
 RemoveFilter=org.graalvm.visualizer.filter.RemoveFilter
