--- a/visualizer/IdealGraphVisualizer/Graal/src/main/resources/org/graalvm/visualizer/graal/filters/graalFilters.properties
+++ b/visualizer/IdealGraphVisualizer/Graal/src/main/resources/org/graalvm/visualizer/graal/filters/graalFilters.properties
@@ -4,3 +4,4 @@
 GraalCFGFilter=org.graalvm.visualizer.graal.filters.GraalCFGFilter
 GraalColoringFilter=org.graalvm.visualizer.graal.filters.GraalColoringFilter
 GraalEdgeColorFilter=org.graalvm.visualizer.graal.filters.GraalEdgeColorFilter
+PropertyColorFilter=org.graalvm.visualizer.graal.filters.PropertyColorFilter
