--- a/visualizer/C1Visualizer/application/pom.xml
+++ b/visualizer/C1Visualizer/application/pom.xml
@@ -1168,7 +1168,66 @@
                 <configuration>
                     <etcConfFile>src/main/resources/${brandingToken}.conf</etcConfFile>
                     <etcClustersFile>src/main/resources/${brandingToken}.clusters</etcClustersFile>
+                    <binDirectory>src/main/resources/bin</binDirectory>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-standalone-zip</id>
+                        <goals>
+                            <goal>standalone-zip</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${brandingToken}-${project.version}</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>install-mac-icon</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/target/${brandingToken}</outputDirectory>
+                            <encoding>UTF-8</encoding>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/src/main/resources</directory>
+                                    <includes>
+                                        <include>${brandingToken}.icns</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>zip-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <zip destfile="${project.build.directory}/${brandingToken}-${project.version}.zip" update="true" whenempty="fail">
+                                    <fileset dir="${project.build.directory}" includes="**/${brandingToken}.icns" />
+                                </zip>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
