remove AnnotatedObjectAccess caches

--- a/substratevm/src/com.oracle.svm.truffle.tck/src/META-INF/native-image/native-image.properties
+++ b/substratevm/src/com.oracle.svm.truffle.tck/src/META-INF/native-image/native-image.properties
@@ -18,7 +18,8 @@ JavaArgs = --add-exports org.graalvm.nativeimage.base/com.oracle.svm.util=ALL-UN
            --add-exports org.graalvm.truffle.runtime/com.oracle.truffle.runtime=ALL-UNNAMED \
            --add-exports jdk.graal.compiler/jdk.graal.compiler.util.json=ALL-UNNAMED \
            --add-exports jdk.internal.vm.ci/jdk.vm.ci.common=ALL-UNNAMED \
-           --add-exports jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED
+           --add-exports jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED \
+           --add-exports jdk.internal.vm.ci/jdk.vm.ci.meta.annotation=ALL-UNNAMED
 
 ProvidedHostedOptions = \
   TruffleTCKCollectMode= \
