--- a/visualizer/IdealGraphVisualizer/branding/pom.xml
+++ b/visualizer/IdealGraphVisualizer/branding/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.graalvm.visualizer</groupId>
         <artifactId>IdealGraphVisualizer-parent</artifactId>
-        <version>1.23-SNAPSHOT</version>
+        <version>1.23</version>
     </parent>
     <artifactId>IdealGraphVisualizer-branding</artifactId>
     <packaging>nbm</packaging>
