--- a/visualizer/IdealGraphVisualizer/ViewerApi/pom.xml
+++ b/visualizer/IdealGraphVisualizer/ViewerApi/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.graalvm.visualizer</groupId>
         <artifactId>IdealGraphVisualizer-parent</artifactId>
-        <version>1.23</version>
+        <version>1.24-SNAPSHOT</version>
     </parent>
     <artifactId>ViewerApi</artifactId>
     <packaging>nbm</packaging>
