--- a/visualizer/IdealGraphVisualizer/pom.xml
+++ b/visualizer/IdealGraphVisualizer/pom.xml
@@ -3,13 +3,13 @@
     <name>IdealGraphVisualizer-parent</name>
     <groupId>org.graalvm.visualizer</groupId>
     <artifactId>IdealGraphVisualizer-parent</artifactId>
-    <version>1.23</version>
+    <version>1.24-SNAPSHOT</version>
     <packaging>pom</packaging>
     <scm>
         <developerConnection>
             scm:git:git@github.com:oracle/graal.git
         </developerConnection>
-      <tag>idealgraphvisualizer-1.23</tag>
+      <tag>HEAD</tag>
   </scm>
     <build>
         <pluginManagement>
