--- a/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/jdk/OWNERS.toml
+++ b/substratevm/src/com.oracle.svm.core/src/com/oracle/svm/core/jdk/OWNERS.toml
@@ -1,8 +1,8 @@
 [[rule]]
 files = "Resources.java ResourcesHelper.java"
 all = [
-    "david.nestorovic@oracle.com",
-    "ivan.ristovic@oracle.com"
+    "vojin.jovanovic@oracle.com",
+    "christian.wirth@oracle.com"
 ]
 any = [
 ]
@@ -10,7 +10,6 @@ any = [
 [[rule]]
 files = "ModuleNative.java RuntimeModuleSupport.java Target_java_lang_Module*.java Target_java_lang_module_*.java Target_jdk_internal_module_*.java"
 all = [
-    "ivan.ristovic@oracle.com",
     "paul.woegerer@oracle.com"
 ]
 any = [
