--- a/visualizer/C1Visualizer/VisualizerUI/pom.xml
+++ b/visualizer/C1Visualizer/VisualizerUI/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <artifactId>C1Visualizer-parent</artifactId>
     <groupId>at.ssw.visualizer</groupId>
-    <version>1.13</version>
+    <version>1.14-SNAPSHOT</version>
   </parent>
   <groupId>at.ssw.visualizer</groupId>
   <artifactId>VisualizerUI</artifactId>
-  <version>1.13</version>
+  <version>1.14-SNAPSHOT</version>
   <packaging>nbm</packaging>
   <name>VisualizerUI</name>
   <properties>
