--- a/visualizer/C1Visualizer/application/pom.xml
+++ b/visualizer/C1Visualizer/application/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>at.ssw.visualizer</groupId>
         <artifactId>C1Visualizer-parent</artifactId>
-        <version>1.13</version>
+        <version>1.14-SNAPSHOT</version>
     </parent>
     <artifactId>C1Visualizer-app</artifactId>
     <packaging>nbm-application</packaging>
