--- a/visualizer/C1Visualizer/branding/pom.xml
+++ b/visualizer/C1Visualizer/branding/pom.xml
@@ -35,11 +35,11 @@
     <parent>
         <groupId>at.ssw.visualizer</groupId>
         <artifactId>C1Visualizer-parent</artifactId>
-        <version>1.13-SNAPSHOT</version>
+        <version>1.13</version>
     </parent>
     <groupId>at.ssw.visualizer</groupId>
     <artifactId>branding</artifactId>
-    <version>1.13-SNAPSHOT</version>
+    <version>1.13</version>
     <packaging>nbm</packaging>
     <name>branding</name>
     <properties>
