--- a/substratevm/src/com.oracle.svm.features/src/META-INF/native-image/com.oracle.svm.features/native-image.properties
+++ b/substratevm/src/com.oracle.svm.features/src/META-INF/native-image/com.oracle.svm.features/native-image.properties
@@ -1,1 +1,2 @@
-Args = --features=com.oracle.svm.features.jdk.JavaNetHttpFeature,com.oracle.svm.features.jdk.SimpleWebServerFeature
+Args = --features=com.oracle.svm.features.jdk.JavaNetHttpFeature \
+  --initialize-at-run-time=sun.net.httpserver.simpleserver
