--- a/substratevm/src/com.oracle.svm.interpreter.metadata/OWNERS.toml
+++ b/substratevm/src/com.oracle.svm.interpreter.metadata/OWNERS.toml
@@ -3,4 +3,5 @@ files = "*"
 all = [
     "bernhard.urban-forster@oracle.com",
     "gilles.m.duboscq@oracle.com",
+    "david.leopoldseder@oracle.com"
 ]
