deprecate and delete FallbackFeature

--- a/.github/ISSUE_TEMPLATE/1_2_native_image_build_time_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_2_native_image_build_time_bug_report.yml
@@ -48,7 +48,7 @@ body:
     attributes:
       label: Build Command
       description: "Provide the exact build command you used."
-      placeholder: "e.g., `native-image --no-fallback ...`"
+      placeholder: "e.g., `native-image ...`"
     validations:
       required: true
 
